tf-security-group.tf
resource "aws_security_group" "jenkins-securitygroup" {
  vpc_id      = aws_vpc.primary.id
  name        = "jenkins-securitygroup"
  description = "security group that allows ssh and all egress traffic"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["76.198.149.152/32"]
  }
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["76.198.149.152/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "jenkins-securitygroup"
  }
}
